# yomikata-qt

./: .bzrignore  CMakeLists.txt  COPYING.TXT  Doxyfile  Doxyfile.config.doxy  README.TXT  arch.dox  archive.cpp  archive.h  archivelister.cpp  archivelister.h  artificer.cpp  artificer.h  book.cpp  book.h  cache.cpp  cache.h  debug.h  debugpageitem.cpp  debugpageitem.h  debugwidget.cpp  debugwidget.h  decodejob.cpp  decodejob.h  decoder.cpp  decoder.h  decodethread.cpp  decodethread.h  depicter.cpp  displaymetrics.cpp  displaymetrics.h  displayscroller.cpp  extractdecodejob.cpp  extractdecodejob.h  extractdecodethread.cpp  extractdecodethread.h  extractlister.cpp  extractlister.h  fileclassification.cpp  fileclassification.h  (+77 more)
cmake/: CodeCoverage.cmake  Doxygen.cmake  Install.cmake  Options.cmake  Paths.cmake  UnitTesting.cmake
cmake/modules/: NSIS.template.in
doc/: arch.dox  commons.dox  dev.dox  interaction.dox  main.dox  roadmap.dox  stylesheet.css  stylesheet.css.bak
doxygen/: header.html
old classes/: archivelister.cpp  archivelister.h  artificer.cpp  artificer.h  book.cpp  book.h  cacheentry.cpp  cacheentry.h  cachemanager.cpp  cachemanager.h  decoder.h  decodethread.h  depicter.h  displayscroller.h  extractdecodethread.cpp  extractdecodethread.h  filedecodejob.h  filelist.h  filelister.h  inertiascroller.cpp  install_manifest.txt  lens.cpp  lister.cpp  lister.h  main.cpp  mainwindow.cpp  page.cpp  page.h  pagecache.h  pageconductor.h  planner.h  presenter.cpp  presenter.h  priority.cpp  priority.h  projector.cpp  projector.h  source.cpp  source.h  steward.cpp  (+5 more)
old classes.bak/: decodethread.cpp  extractdecodejob.h  extractlister.h  fileinfo.h  mainwindow.h  pagedisplay.h  pageloader.cpp  pageturner.cpp  simplescroller.cpp  simplescroller.h
test/: CMakeLists.txt  booktest.cpp  booktest.h  strategisttest.cpp  strategisttest.h  test.cpp
